# HighViolet

./: .gitignore  CMakeLists.txt  README.md  install.debian.sh
include/: hv.h
src/: debug.c  main.c  utils.c
src/camera/: manipulate.c  memory.c
src/coord/: debug.c  utils.c
src/draw/: hexagon.c
src/engine_timers/: manipulation.c  memory.c
src/input/: keyboard.c  mouse.c
src/state/: memory.c
src/tick/: camera.c
src/tick/input/: keyboard.c  mouse.c
src/tile/: line.c  list.c  memory.c
src/tile_list/: generation.c  logic_tick_update.c  memory.c
